use method helper for List<?> convert to List<E>